<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.sofak.fastcalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">

        <com.example.sofak.fastcalculator.AutoResizeTextView
            android:id="@+id/canvas"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="100px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150px"
        android:layout_height="110px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backspace"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150px"
            android:layout_height="110px"
            android:layout_alignParentRight="true"
            android:layout_weight="0.30"
            android:background="@drawable/ic_action_name"
            android:clickable="true"
            android:elevation="0dp"
            android:longClickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:elevation="0dp"
            android:onClick="ButC"
            android:text="C"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/parenthesis"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButPar"
            android:text="()"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/percent"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButPer"
            android:text="%"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dia"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButDia"
            android:text="/"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But7"
            android:text="7"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eight"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But8"
            android:text="8"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But9"
            android:text="9"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/epi"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButEpi"
            android:text="*"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But4"
            android:text="4"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/five"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But5"
            android:text="5"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But6"
            android:text="6"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/meion"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButPlun"
            android:text="-"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But1"
            android:text="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But2"
            android:text="2"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But3"
            android:text="3"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/kai"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButKai"
            android:text="+"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dot"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButDot"
            android:text="."
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/zero"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="But0"
            android:text="0"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/synplun"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButSynPlyn"
            android:text="+/-"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ison"
            android:layout_width="368dp"
            android:layout_height="150px"
            android:layout_weight="0.30"
            android:background="@drawable/buttons"
            android:clickable="true"
            android:onClick="ButIson"
            android:text="="
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
